modified:   simple.cpp

--- a/webots/controllers/experimental/Makefile
+++ b/webots/controllers/experimental/Makefile
@@ -20,7 +20,7 @@ setpoint = human
 
 # -----------------------------------------------------------------------------
 
-ALL = experimental
+ALL = $(shell basename "`pwd`")
 
 OPENCV_DIR = /usr/include/opencv4
 
