--- a/webots/controllers/simple/Makefile
+++ b/webots/controllers/simple/Makefile
@@ -12,16 +12,28 @@
 #  You should have received a copy of the GNU General Public License
 #  along with this program. If not, see <http:--www.gnu.org/licenses/>.
 
-ALL = simple
+# Support different worlds and setpoints --------------------------------------
+
+world = simple
+
+setpoint = human
+
+# -----------------------------------------------------------------------------
+
+ALL = $(shell basename "`pwd`")
+
+OPENCV_DIR = /usr/include/opencv4
+
+SIMSENSORS_DIR = $(HOME)/Desktop/simsensors/src
 
 CFLAGS = -O3 -std=c++11 -Wall -Wextra
 
 SRCDIR = ../../../src
-INCLUDE = -I../../../src 
+INCLUDE = -I$(SRCDIR) -I$(SRCDIR)/pid/slowfast -I$(OPENCV_DIR) -I$(SIMSENSORS_DIR)
 
 LIBRARIES = -L/usr/lib/x86_64-linux-gnu/ -lopencv_highgui -lopencv_core -lopencv_imgproc
 
-CXX_SOURCES = simple.cpp
+CXX_SOURCES = $(ALL).cpp
 
 all: $(ALL)
 
@@ -31,8 +43,9 @@ USE_C_API = true
 VERBOSE = 1
 
 run:
-	webots ../../worlds/$(ALL).wbt &
-	/usr/local/webots/webots-controller --stdout-redirect $(ALL)
+	webots ../../worlds/$(world).wbt &
+	/usr/local/webots/webots-controller --stdout-redirect $(ALL) $(world) $(setpoint) \
+		../../protos
 
 
 edit:
