--- a/webots/plugins/physics/experimental/Makefile
+++ b/webots/plugins/physics/experimental/Makefile
@@ -18,7 +18,7 @@ ALL = $(shell basename "`pwd`")
 
 OPENCV_DIR = /usr/include/opencv4
 
-SIMSENSORS_DIR = $(HOME)/Desktop/simsensors/src
+SIMSENSORS_DIR = $(HOME)/Desktop
 
 CFLAGS = -O3 -std=c++11 -Wall -Wextra
 
