modified:   webots/controllers/controller/main.cpp

--- a/webots/controllers/controller/Makefile
+++ b/webots/controllers/controller/Makefile
@@ -31,7 +31,7 @@ INCLUDE = -I$(SRC_DIR) -I$(SRC_DIR)/pid/slowfast -I$(OPENCV_DIR) -I$(SIMSENSORS_
 
 LIBRARIES = -L/usr/lib/x86_64-linux-gnu/ -lopencv_highgui -lopencv_core -lopencv_imgproc
 
-CXX_SOURCES = main.cpp ../support.cpp
+CXX_SOURCES = main.cpp
 
 FILES_TO_REMOVE += *.csv
 
