modified:   webots/controllers/playback/main.cpp

--- a/webots/controllers/playback/Makefile
+++ b/webots/controllers/playback/Makefile
@@ -38,10 +38,9 @@ USE_C_API = true
 VERBOSE = 1
 
 run:
-	webots ../../worlds/$(world).wbt &
-	/usr/local/webots/webots-controller --stdout-redirect $(EXE) $(world) \
-		$(logfile)
-
+	./$(EXE) $(logfile)
+	#webots ../../worlds/$(world).wbt &
+	#/usr/local/webots/webots-controller --stdout-redirect $(EXE) $(logfile)
 
 edit:
 	vim main.cpp
