Moved Haskell stuff to attic

--- a/attic/webots/plugins/physics/simple/Makefile.haskell
+++ b/attic/webots/plugins/physics/simple/Makefile.haskell
@@ -15,6 +15,8 @@
 # You should have received a copy of the GNU General Public License
 # along with this program. If not, see <http:--www.gnu.org/licenses/>.
 
+ALL = $(shell basename "`pwd`")
+
 CFLAGS = -O3 -std=c++11 -Wall -Wextra
 
 SRC = ../../../../src
@@ -23,11 +25,11 @@ INCLUDE = -I$(SRC) -I$(SRC)/pid/haskell
 
 HASKDIR = ../../../../haskell
 
-CXX_SOURCES = custom.cpp copilot_core.cpp $(SRC)/pid/haskell/copilot_streams.cpp
+CXX_SOURCES = $(ALL).cpp copilot_core.cpp $(SRC)/pid/haskell/copilot_streams.cpp
 
 FILES_TO_REMOVE += copilot*
 
-all: libcustom.so
+all: lib$(ALL).so
 
 copilot_core.cpp : $(HASKDIR)/*.hs $(HASKDIR)/pids/*.hs
 	runhaskell -i$(HASKDIR) -i$(HASKDIR)/pids $(HASKDIR)/Pids.hs -i$(PWD)
