Playback supports world specification

--- a/webots/controllers/playback/Makefile
+++ b/webots/controllers/playback/Makefile
@@ -46,7 +46,8 @@ VERBOSE = 1
 
 run:
 	webots ../../worlds/$(world).wbt &
-	/usr/local/webots/webots-controller --stdout-redirect $(EXE) $(logfile)
+	/usr/local/webots/webots-controller --stdout-redirect $(EXE) $(world) \
+		$(logfile)
 
 edit:
 	vim main.cpp
