renamed:    old/crazyflie/crazyflie.ino -> old/bolt/bolt.ino

--- a/old/bolt/Makefile
+++ b/old/bolt/Makefile
@@ -2,14 +2,14 @@ PORT = /dev/ttyACM0
 
 FQBN = STMicroelectronics:stm32:GenF4:pnum=GENERIC_F405RGTX,usb=CDCgen
 
-BIN = build/crazyflie.ino.bin
+BIN = build/bolt.ino.bin
 
 SRC = ../src
 
 any:
 	echo "Please specify cf2 or bolt"
 
-bolt: crazyflie.ino  *.cpp *.h $(SRC)/*.hpp $(SRC)/tasks/*.hpp \
+bolt: bolt.ino  *.cpp *.h $(SRC)/*.hpp $(SRC)/tasks/*.hpp \
 	$(SRC)/msp/__messages__.h
 	cp bolt/imu.cpp ./__imu__.cpp
 	cp bolt/motors.cpp ./__motors__.cpp
@@ -17,16 +17,16 @@ bolt: crazyflie.ino  *.cpp *.h $(SRC)/*.hpp $(SRC)/tasks/*.hpp \
 		--libraries $(HOME)/Documents/Arduino/libraries \
 		--libraries ../.. \
 		--build-path ./build \
-		--fqbn $(FQBN) crazyflie.ino
+		--fqbn $(FQBN) bolt.ino
 
 $(SRC)/msp/__messages__.h: ../../msppg/messages.json
-	cd ../../msppg; make install; cd ../old/crazyflie
+	cd ../../msppg; make install; cd ../old/bolt
 
 standard_config:
 	cp $(SRC)/control/standard.hpp $(SRC)/__control__.hpp
 
 dfu: $(BIN)
-	dfu-util -d 0483:5740 -a 0 -s 0x08000000:leave -D build/crazyflie.ino.bin
+	dfu-util -d 0483:5740 -a 0 -s 0x08000000:leave -D build/bolt.ino.bin
 
 clean:
 	rm -rf build __*__.cpp
