renamed:    src/newpid/pids/altitude.hpp -> src/newpids/altitude.hpp

--- a/webots/plugins/physics/experimental/Makefile
+++ b/webots/plugins/physics/experimental/Makefile
@@ -24,8 +24,7 @@ CFLAGS = -O3 -std=c++11 -Wall -Wextra
 
 SRC_DIR = ../../../../src
 
-INCLUDE = -I$(SRC_DIR) -I$(SRC_DIR)/newpid/standard -I$(SIMSENSORS_DIR) \
-		  -I$(OPENCV_DIR)
+INCLUDE = -I$(SRC_DIR) -I$(SRC_DIR)/newpids -I$(SIMSENSORS_DIR) -I$(OPENCV_DIR)
 
 CXX_SOURCES = $(ALL).cpp
 
