--- a/simtest/Makefile
+++ b/simtest/Makefile
@@ -1,13 +1,17 @@
+ROOT = ../..
+
+SIMSENSORS = $(ROOT)/simsensors/src
+
 all: simtest
 
 run: simtest
 	./simtest ../webots/worlds/simple.wbt ../webots/protos/DiyQuad.proto
 
-simtest: main.o
+simtest: main.o 
 	g++ -o simtest main.o
 
-main.o: main.cpp
-	g++ -Wall -c -I../.. -I../src main.cpp
+main.o: main.cpp $(SIMSENSORS)/parsers/webots/* $(SIMSENSORS)/sensors/* 
+	g++ -Wall -c -I$(ROOT) -I../src main.cpp
 
 edit:
 	vim main.cpp
