--- a/library.properties
+++ b/library.properties
@@ -7,4 +7,4 @@ paragraph=Minimalist flight control
 category=Other
 url=https://github.com/simondlevy/Hackflight
 architectures=*
-includes=hackflight.hpp
+includes=hackflight.h
