renamed:    simtest/simtest.hpp -> simtest/flydar.hpp

--- a/simtest/Makefile
+++ b/simtest/Makefile
@@ -12,7 +12,7 @@ run: simtest
 simtest: main.o
 	g++ -o simtest main.o
 
-main.o: main.cpp simtest.hpp \
+main.o: main.cpp flydar.hpp \
 	$(SIMSENSORS)/parsers/webots/* $(SIMSENSORS)/sensors/* 
 	g++ -Wall -c -I$(ROOT) -I../src main.cpp
 
@@ -20,4 +20,4 @@ edit:
 	vim main.cpp
 
 clean:
-	rm -f simtest *.o
+	rm -f simtest *.o *.csv
