--- a/simtest/Makefile
+++ b/simtest/Makefile
@@ -9,12 +9,15 @@ all: simtest
 run: simtest
 	./simtest ../webots/protos/DiyQuad.proto $(world)
 
-simtest: main.o
-	g++ -o simtest main.o
+simtest: main.o twoexit.o
+	g++ -o simtest main.o twoexit.o
 
 main.o: main.cpp *.hpp \
 	$(SIMSENSORS)/parsers/webots/* $(SIMSENSORS)/sensors/* 
 	g++ -Wall -c -I$(ROOT) -I../src main.cpp
+
+twoexit.o: twoexit.cpp *.hpp
+	g++ -Wall -c -I$(ROOT) -I../src twoexit.cpp
 
 edit:
 	vim main.cpp
