renamed:    simtest/onewall.wbt -> simtest/twowall.wbt

--- a/simtest/Makefile
+++ b/simtest/Makefile
@@ -26,5 +26,5 @@ clean:
 	rm -f simtest *.o *.csv
 
 play:
-	#./playback.py $(world)
-	./playback.py onewall.wbt
+	# ./playback.py $(world)
+	./playback.py twowall.wbt
