--- a/webots/controllers/controller/Makefile
+++ b/webots/controllers/controller/Makefile
@@ -12,11 +12,8 @@
 #  You should have received a copy of the GNU General Public License
 #  along with this program. If not, see <http:--www.gnu.org/licenses/>.
 
-# Command-line variables; e.g. make run world=twoexit ------------------------
+# Command-line variable; e.g. make run world=twoexit ------------------------
 world = simple
-poselogname = poselog.csv
-setpointlogname = setpointlog.csv
-# ----------------------------------------------------------------------------
 
 EXE = $(shell basename "`pwd`")
 
@@ -44,9 +41,7 @@ VERBOSE = 1
 
 run:
 	webots $(WORLDS_DIR)/$(world).wbt &
-	/usr/local/webots/webots-controller --stdout-redirect $(EXE) $(world) \
-		$(poselogname) $(setpointlogname)
-
+	/usr/local/webots/webots-controller --stdout-redirect $(EXE) $(world)
 
 edit:
 	vim main.cpp
